# mocnpub

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TASKLIST.md  build.rs  lefthook.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: benchmark.rs
cuda/: secp256k1.cu  secp256k1.ptx
docs/: JOURNEY.md  LEARNING.md  OPTIMIZATION.md  TASKLIST.md
examples/: keygen_test.rs  mandelbrot.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_mod_inv.rs
learning/: mandelbrot.cu
scripts/: benchmark.ps1
src/: gpu.rs  lib.rs  main.rs
