[package]
name = "mocnpub-main"
version = "0.1.0"
edition = "2024"

[dependencies]
cudarc = { version = "0.17.8", features = ["cuda-version-from-build-system"] }
num-complex = "0.4"
image = "0.25"
secp256k1 = { version = "0.28", features = ["rand-std"] }
rand = "0.9"
bech32 = "0.11"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
