[package]
name = "mocnpub-main-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cudarc = "0.17"

[dependencies.mocnpub-main]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mod_inv"
path = "fuzz_targets/fuzz_mod_inv.rs"
test = false
doc = false
bench = false
